[gd_scene load_steps=27 format=3 uid="uid://c3dc0h14m5kem"]

[ext_resource type="Script" uid="uid://clt6f0826b4em" path="res://scripts/main_menu.gd" id="1_7ycvg"]
[ext_resource type="Script" uid="uid://xtkcht8bmaja" path="res://scripts/manager.gd" id="1_qwutr"]
[ext_resource type="PackedScene" uid="uid://ciysvlcp7d35f" path="res://background.tscn" id="3_hq1ik"]
[ext_resource type="Script" uid="uid://cr07pcop2o4wl" path="res://scripts/moving_backdrop.gd" id="7_nfk4m"]
[ext_resource type="Texture2D" uid="uid://whjgafu4kkvq" path="res://graphics/still_road.png" id="8_7ycvg"]
[ext_resource type="Script" uid="uid://c6qyb6w5xiq5d" path="res://scripts/building.gd" id="8_671wp"]
[ext_resource type="Texture2D" uid="uid://c2tcof14debu3" path="res://graphics/buildings/1_back.png" id="9_mo76n"]
[ext_resource type="Texture2D" uid="uid://bjc4uw7iei8gw" path="res://graphics/mobile_road.png" id="9_wr18j"]
[ext_resource type="Texture2D" uid="uid://gx1k0xx0p1fb" path="res://graphics/buildings/1_front.png" id="10_42l1d"]
[ext_resource type="Theme" uid="uid://bk5d04iu41rhp" path="res://theme.tres" id="10_wr18j"]
[ext_resource type="Texture2D" uid="uid://d2at8fjhheq8w" path="res://graphics/buildings/bk1_back.png" id="11_2jcla"]
[ext_resource type="Texture2D" uid="uid://qtnoooeo55e1" path="res://graphics/buildings/2_back.png" id="11_7th4q"]
[ext_resource type="Texture2D" uid="uid://bf36np238cp5w" path="res://graphics/buildings/2_front.png" id="12_6jybn"]
[ext_resource type="Script" uid="uid://bh60v6cp737gm" path="res://scripts/opening_scene.gd" id="12_671wp"]
[ext_resource type="Texture2D" uid="uid://ceg4tb0wfo20s" path="res://graphics/buildings/bk1_front.png" id="12_m35m6"]
[ext_resource type="Script" uid="uid://deugr1n12t31u" path="res://scripts/game.gd" id="13_mo76n"]
[ext_resource type="Script" uid="uid://cc0ltwef4x8cg" path="res://scripts/tint_building.gd" id="13_u0ygc"]
[ext_resource type="Texture2D" uid="uid://b8lil1kkqqub8" path="res://graphics/still_sky.png" id="14_m35m6"]
[ext_resource type="PackedScene" uid="uid://dmoywvjuvjat0" path="res://received_msg.tscn" id="19_6jybn"]
[ext_resource type="Script" uid="uid://d28oxe04d22st" path="res://scripts/receive_queue.gd" id="20_84odl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3jxj"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1375, 0.173125, 0.25, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.1045, 0.131575, 0.19, 1)
border_blend = true
corner_detail = 5

[sub_resource type="LabelSettings" id="LabelSettings_nfk4m"]
font_size = 30
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_671wp"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.376471)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="Resource" id="Resource_2jcla"]
script = ExtResource("8_671wp")
back_tex = ExtResource("9_mo76n")
front_tex = ExtResource("10_42l1d")
metadata/_custom_type_script = "uid://c6qyb6w5xiq5d"

[sub_resource type="Resource" id="Resource_84odl"]
script = ExtResource("8_671wp")
back_tex = ExtResource("11_7th4q")
front_tex = ExtResource("12_6jybn")
metadata/_custom_type_script = "uid://c6qyb6w5xiq5d"

[sub_resource type="Resource" id="Resource_7th4q"]
script = ExtResource("13_u0ygc")
tint = Color(0.650667, 0.64, 0.8, 1)
back_tex = ExtResource("11_2jcla")
front_tex = ExtResource("12_m35m6")
metadata/_custom_type_script = "uid://cc0ltwef4x8cg"

[node name="Main Scene" type="PanelContainer" node_paths=PackedStringArray("main_menu", "opening_scene", "game")]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o3jxj")
script = ExtResource("1_qwutr")
main_menu = NodePath("Menu (Home)")
opening_scene = NodePath("OpeningScene")
game = NodePath("Game")

[node name="Background" parent="." instance=ExtResource("3_hq1ik")]
layout_mode = 2

[node name="Menu (Home)" type="MarginContainer" parent="." node_paths=PackedStringArray("menu_main", "menu_connect", "edit_ip", "edit_port", "edit_slot", "edit_pwd", "error_label")]
visible = false
layout_mode = 2
script = ExtResource("1_7ycvg")
menu_main = NodePath("Control/CenterContainer/MarginContainer/Menu_Main")
menu_connect = NodePath("Control/CenterContainer/MarginContainer/Menu_Connect")
edit_ip = NodePath("Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/IP")
edit_port = NodePath("Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/Port")
edit_slot = NodePath("Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/Slot")
edit_pwd = NodePath("Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/Password")
error_label = NodePath("Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/VBoxContainer/Label")

[node name="Control" type="Control" parent="Menu (Home)"]
texture_filter = 2
layout_mode = 2

[node name="Label" type="Label" parent="Menu (Home)/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.0
offset_top = 44.0
offset_right = 94.0
offset_bottom = 86.0
grow_horizontal = 2
text = "BK Simulator"
label_settings = SubResource("LabelSettings_nfk4m")
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Menu (Home)/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -385.0
offset_top = -97.0
offset_right = -89.0
offset_bottom = 180.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu (Home)/Control/CenterContainer"]
layout_mode = 2

[node name="Menu_Main" type="PanelContainer" parent="Menu (Home)/Control/CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_671wp")

[node name="ButtonBox" type="VBoxContainer" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Main"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Start" type="Button" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Main/ButtonBox"]
layout_mode = 2
text = "Start Game"

[node name="Settings" type="Button" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Main/ButtonBox"]
visible = false
layout_mode = 2
theme = ExtResource("10_wr18j")
text = "Settings
"

[node name="Exit" type="Button" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Main/ButtonBox"]
layout_mode = 2
text = "Exit"

[node name="Menu_Connect" type="PanelContainer" parent="Menu (Home)/Control/CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_671wp")

[node name="ConnectBox" type="GridContainer" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox"]
layout_mode = 2
text = "IP:"
horizontal_alignment = 2

[node name="IP" type="LineEdit" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
placeholder_text = "archipelago.gg"

[node name="Label2" type="Label" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox"]
layout_mode = 2
text = "Port:"
horizontal_alignment = 2

[node name="Port" type="LineEdit" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
placeholder_text = "38281"

[node name="Label3" type="Label" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox"]
layout_mode = 2
text = "Slot:"
horizontal_alignment = 2

[node name="Slot" type="LineEdit" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Label4" type="Label" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox"]
layout_mode = 2
text = "Passwd:"
horizontal_alignment = 2

[node name="Password" type="LineEdit" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
secret = true

[node name="Control" type="Control" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 10

[node name="Connect" type="Button" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="Back" type="Button" parent="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="OpeningScene" type="Control" parent="." node_paths=PackedStringArray("lbl")]
visible = false
layout_mode = 2
script = ExtResource("12_671wp")
lbl = NodePath("Label")

[node name="Label" type="Label" parent="OpeningScene"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Damn... BK'd again.
Guess it's time to grab lunch."
horizontal_alignment = 1

[node name="Game" type="Control" parent="." node_paths=PackedStringArray("runwalk_label", "speed_label", "rain_label", "snow_label", "distance_label", "sun_button", "rain_button", "snow_button", "buttons", "progress", "progress_label", "embark_label", "backdrop_container", "moving_backdrop", "message_queue")]
texture_filter = 2
layout_mode = 2
script = ExtResource("13_mo76n")
runwalk_label = NodePath("Stats/Stats/WalkRun")
speed_label = NodePath("Stats/Stats/Speed")
rain_label = NodePath("Stats/Stats/RainSpeed")
snow_label = NodePath("Stats/Stats/SnowSpeed")
distance_label = NodePath("Stats/Stats/Distance")
sun_button = NodePath("Buttons/VBoxContainer/Sunny")
rain_button = NodePath("Buttons/VBoxContainer/Rainy")
snow_button = NodePath("Buttons/VBoxContainer/Snowy")
buttons = NodePath("Buttons")
progress = NodePath("Progress")
progress_label = NodePath("Progress/HBoxContainer/Label2")
embark_label = NodePath("Buttons/VBoxContainer/EmbarkLabel")
backdrop_container = NodePath("Backdrop")
moving_backdrop = NodePath("Backdrop/MovingBackdrop")
message_queue = NodePath("MessageQueue")

[node name="Backdrop" type="SubViewportContainer" parent="Game"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="MovingBackdrop" type="SubViewport" parent="Game/Backdrop" node_paths=PackedStringArray("moving_road")]
handle_input_locally = false
size = Vector2i(640, 360)
render_target_update_mode = 4
script = ExtResource("7_nfk4m")
buildings = Array[ExtResource("8_671wp")]([SubResource("Resource_2jcla"), SubResource("Resource_84odl")])
bk_buildings = Array[ExtResource("8_671wp")]([SubResource("Resource_7th4q")])
moving_road = NodePath("MovingRoad")

[node name="StillSky" type="TextureRect" parent="Game/Backdrop/MovingBackdrop"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_m35m6")

[node name="StillRoad" type="TextureRect" parent="Game/Backdrop/MovingBackdrop"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_7ycvg")

[node name="MovingRoad" type="TextureRect" parent="Game/Backdrop/MovingBackdrop"]
offset_left = -640.0
offset_right = 1280.0
offset_bottom = 360.0
texture = ExtResource("9_wr18j")
stretch_mode = 1

[node name="Stats" type="MarginContainer" parent="Game"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -122.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 10

[node name="Stats" type="GridContainer" parent="Game/Stats"]
layout_mode = 2
columns = 2

[node name="WalkRun" type="Label" parent="Game/Stats/Stats"]
layout_mode = 2
text = "Run Speed:"
horizontal_alignment = 2

[node name="Speed" type="Label" parent="Game/Stats/Stats"]
layout_mode = 2
text = "100.0"

[node name="Label" type="Label" parent="Game/Stats/Stats"]
layout_mode = 2
text = "Rain Speed:"
horizontal_alignment = 2

[node name="RainSpeed" type="Label" parent="Game/Stats/Stats"]
layout_mode = 2
text = "100.0"

[node name="Label2" type="Label" parent="Game/Stats/Stats"]
layout_mode = 2
text = "Snow Speed:"
horizontal_alignment = 2

[node name="SnowSpeed" type="Label" parent="Game/Stats/Stats"]
layout_mode = 2
text = "100.0"

[node name="Label3" type="Label" parent="Game/Stats/Stats"]
layout_mode = 2
text = "Distance:"
horizontal_alignment = 2

[node name="Distance" type="Label" parent="Game/Stats/Stats"]
layout_mode = 2
text = "5000"

[node name="BackToMenu" type="Button" parent="Game"]
texture_filter = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_bottom = 28.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = " Exit "

[node name="Buttons" type="MarginContainer" parent="Game"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Game/Buttons"]
layout_mode = 2

[node name="EmbarkLabel" type="Label" parent="Game/Buttons/VBoxContainer"]
layout_mode = 2
text = "Embark:"
horizontal_alignment = 1

[node name="Sunny" type="Button" parent="Game/Buttons/VBoxContainer"]
layout_mode = 2
text = "Sunny Weather"

[node name="Rainy" type="Button" parent="Game/Buttons/VBoxContainer"]
layout_mode = 2
text = "Rainy Weather"

[node name="Snowy" type="Button" parent="Game/Buttons/VBoxContainer"]
layout_mode = 2
text = "Snowy Weather"

[node name="Progress" type="MarginContainer" parent="Game"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.5
offset_right = 40.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/margin_top = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Game/Progress"]
layout_mode = 2

[node name="Label" type="Label" parent="Game/Progress/HBoxContainer"]
layout_mode = 2
text = "Position:"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Game/Progress/HBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="MessageQueue" type="Control" parent="Game" node_paths=PackedStringArray("queue_vbox", "notifier")]
clip_contents = true
custom_minimum_size = Vector2(640, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("20_84odl")
queue_vbox = NodePath("MarginContainer/QueueVBox")
message_scene = ExtResource("19_6jybn")
notifier = NodePath("VisibleOnScreenNotifier2D")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Game/MessageQueue"]
position = Vector2(0, -160)

[node name="MarginContainer" type="MarginContainer" parent="Game/MessageQueue"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="QueueVBox" type="VBoxContainer" parent="Game/MessageQueue/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[connection signal="pressed" from="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Main/ButtonBox/Start" to="Menu (Home)" method="_on_start_pressed"]
[connection signal="pressed" from="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Main/ButtonBox/Exit" to="Menu (Home)" method="_on_exit_pressed"]
[connection signal="text_submitted" from="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/IP" to="Menu (Home)" method="_on_connect_pressed" unbinds=1]
[connection signal="text_submitted" from="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/Port" to="Menu (Home)" method="_on_connect_pressed" unbinds=1]
[connection signal="text_submitted" from="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/Slot" to="Menu (Home)" method="_on_connect_pressed" unbinds=1]
[connection signal="text_submitted" from="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/Password" to="Menu (Home)" method="_on_connect_pressed" unbinds=1]
[connection signal="pressed" from="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/VBoxContainer/Connect" to="Menu (Home)" method="_on_connect_pressed"]
[connection signal="pressed" from="Menu (Home)/Control/CenterContainer/MarginContainer/Menu_Connect/ConnectBox/VBoxContainer/Back" to="Menu (Home)" method="_on_back_pressed"]
[connection signal="open_game" from="Game" to="." method="fade_to_game"]
[connection signal="play_opening" from="Game" to="." method="fade_to_opening"]
[connection signal="return_to_menu" from="Game" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="Game/BackToMenu" to="Game" method="_on_back_to_menu_pressed"]
